--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
     </properties>
 
     <build>
-        <sourceDirectory>src/main/java</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -29,7 +28,6 @@
                     <target>11</target>
                 </configuration>
             </plugin>
-            <!-- оставляем только одну версию maven-surefire-plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -52,8 +50,14 @@
                         </property>
                     </systemProperties>
                 </configuration>
-                          </plugin>
-            <!-- плагин Jacoco для покрытия тестов -->
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -74,15 +78,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <!-- плагин allure-maven для генерации отчетов -->
-            <plugin>
-                <groupId>io.qameta.allure</groupId>
-                <artifactId>allure-maven</artifactId>
-                <version>2.10.0</version>
-                <configuration>
-                    <reportVersion>${allure.version}</reportVersion>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>io.qameta.allure</groupId>
@@ -109,7 +104,6 @@
             <version>5.14.1</version>
             <scope>test</scope>
         </dependency>
-        <!-- оставляем одну версию io.rest-assured -->
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
@@ -128,13 +122,11 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
-        <!-- модуль взаимодействия Allure и Junit -->
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-junit4</artifactId>
             <version>${allure.version}</version>
         </dependency>
-        <!-- модуль взаимодействия Allure и RestAssured -->
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-rest-assured</artifactId>
